<resources>
    <string name="app_name">校内问答</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="home">首页</string>
    <string name="notification">通知</string>
    <string name="Session">私信</string>
    <string name="draft">草稿</string>
    <string name="settings">设置</string>
    <string name="exit">退出</string>
    <string name="collection">收藏</string>
    <string name="search">搜索</string>
    <string name="filter">筛选</string>
    <string name="concern">关注</string>
    <string name="login">登录</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="register">注册</string>
    <string name="confirmpassword">确认密码</string>
    <string name="email">邮箱</string>

    <string name="open_camera_fail">打开相机失败</string>
    <string name="photo_save_fail">相片存储失败,请尝试其它相机功能APP进行拍照</string>
    <string name="max_options">已达到最大选择数量</string>
    <string name="delete">删除</string>
    <string name="uploading_files">正在上传文件</string>
    <string name="content">简介</string>
    <string name="location">地区</string>
    <string name="nickname">昵称</string>
    <string name="confirm_delete">确认删除?</string>
    <string name="draftDeleteWarning">确定删除这条草稿？</string>
    <string name="title_activity_settings">Settings</string>


    <string name="str_recorder_normal">按住 说话</string>
    <string name="str_recorder_recording">松开 结束</string>
    <string name="str_recorder_want_cancel">松开手指 取消录制</string>
    <string name="recorder_dialog_label">手指上滑 取消录制</string>


    <string name="dialog_up_to_cancel">手指上滑， 取消录制</string>
    <string name="dialog_release_to_cancel">松开手指 取消录制</string>
    <string name="dialog_recordtime_too_short">录音时间过短</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message history</string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string-array name="list_colors_value">
        <item>indigo</item>
        <item>purple</item>
        <item>green</item>
        <item>blue</item>
        <item>red</item>
    </string-array>

    <string-array name="list_colors">
        <item>靛蓝色</item>
        <item>紫色</item>
        <item>绿色</item>
        <item>蓝色</item>
        <item>红色</item>
    </string-array>

    <string-array name="item_counts">
        <item>自动(根据网络类型)</item>
        <item>10</item>
        <item>20</item>
        <item>30</item>
    </string-array>

    <string name="default_list_entries_value">indigo</string>
    <string name="item_counts_auto">自动(根据网络类型)</string>
    <string name="favorite">收藏夹</string>

</resources>
