<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item

            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home"/>

        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_notification"
            android:title="@string/notification"/>
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/favorite"/>


    </group>

    <group android:id="@+id/system">

        <item
            android:id="@+id/nav_draft"
            android:title="@string/draft"/>
            <item
                android:id="@+id/nav_settings"
                android:title="@string/settings"/>

    </group>

</menu>
