<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include layout="@layout/appbar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="140sp">

        <TextView
            android:layout_margin="5sp"
            android:layout_alignParentBottom="true"
            android:textSize="18sp"
            android:text="点击上传背景图片"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/iv_user_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civ_userIcon"
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:layout_centerInParent="true"
            android:layout_margin="10sp"
            />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="7sp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_nick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5sp">

                <EditText
                    android:id="@+id/et_nick"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nickname"
                    android:inputType="text"/>
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="5sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="性别"
                    android:textSize="19sp"/>


            </LinearLayout>

            <Spinner
                android:id="@+id/sp_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5sp">
            </Spinner>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5sp">

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/content"
                    android:inputType="textMultiLine"
                    android:maxLines="4"
                    android:minLines="2"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5sp">

                <EditText
                    android:id="@+id/et_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/location"
                    android:inputType="text"/>
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"

                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="擅长领域"
                    android:textSize="19sp"/>


            </LinearLayout>

            <TextView
                android:id="@+id/tv_show_good_at_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/colorAccent"
                android:clickable="true"
                android:gravity="center"
                android:text="尚未选择"
                android:textSize="19sp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_confirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="确定"/>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>


</LinearLayout>